ai-fixed